# Vibe-Trading

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  Add-Login-Plan.md  Architecture-Design.md  DESIGN.md  Dockerfile  Dokploy_Setup.MD  Feishu-cli-Integration.md  Hermes Agent 架构与 semantier应用.md  Migration-Plan.md  Multi-Tenant-Design.md  OpenClaw Hermes 7-Layer Harness Mapping.md  README.md  UI-DESIGN.md  body.json  cdp_script.js  docker-compose.yml  docker-entrypoint.sh  feishu-bot-meeting-creation.md  feishu_integration_plan.md  feishu_permission_check.sh  get_button_styles.js  get_styles.js  inspect_sse.py  package-lock.json  package.json  prompt.txt  pyproject.toml  pytest.ini  raw-sse-8899.txt  raw-sse-live.txt  raw-sse.txt  repro_response_failed.py  script.js  session_store_uinification_plan.md  skills-lock.json  start-docker.sh  start_backend.sh  (+2 more)
agent/: .env.example  .gitignore  =1.5.3  PROMPT_VISUALIZATIONS.md  README.md  SKILL.md  api_server.py  cli.py  hermes_dashboard_wrapper.py  mcp_server.py  pyproject.toml  raw-sse-live.txt  requirements.txt  runtime_env.py  test_calendar.py  test_discovery.py  test_feishu.py
agent/.auth/: auth.sqlite3
agent/.hermes/: .skills_prompt_snapshot.json  SOUL.md  config.yaml
agent/.hermes/memories/: MEMORY.md
agent/.hermes/trajectories/: semantier_trajectory_20260423.jsonl
agent/backtest/: metrics.py  runner.py
agent/backtest/engines/: __init__.py  base.py  crypto.py  options_portfolio.py
agent/backtest/loaders/: okx.py  tushare.py  yfinance_loader.py
agent/config/swarm/: feishu_meeting_coordinator.yaml
agent/src/: runtime_prompt_policy.py  ui_services.py  upload_capabilities.py  vibe_trading_helper.py
agent/src/adapters/: __init__.py  base.py  factory.py  feishu_visualization_adapter.py  web_visualization_adapter.py
agent/src/auth/: __init__.py  store.py  workspace.py
agent/src/backtest/: bootstrap.py
agent/src/core/: skills.py
agent/src/hermes_tool_adapter/: __init__.py  vibe_trading_compat.py  vibe_trading_finance.py
agent/src/plugins/: __init__.py
agent/src/session/: events.py  models.py  store.py  (+2 more)
agent/tests/: conftest.py  test_api_run_resolution.py  test_auth_store_messaging.py  test_bash_tool.py  test_doc_reader_tool.py  test_feishu_visualization_adapter.py  test_runtime_prompt_policy.py  test_session_event_bus.py  test_session_service.py  test_vibe_trading_helper_fallback_logging.py
(+224 files in other folders)
