[project]
name = "vibe-trading-ai"
version = "0.1.3"
description = "Natural-language finance research AI agent with backtesting"
requires-python = ">=3.11"
readme = "README.md"
authors = [
    {name = "HKUDS", email = "hkuds@connect.hku.hk"},
]
keywords = ["finance", "trading", "backtesting", "agent", "swarm", "quantitative"]
dependencies = [
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.0.5",
    "langgraph>=0.2.50,<0.3",
    "langgraph-checkpoint>=2.0.0",
    "python-dotenv>=1.0.0",
    "fire>=0.7.1,<1",
    "openai>=2.21.0,<3",
    "httpx>=0.28.1,<1",
    "jiter>=0.13.0,<1",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "statsmodels>=0.14.0",
    "duckdb>=1.2.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "smartmoneyconcepts>=0.0.1",
    "pyharmonics>=1.5.0",
    "tushare>=1.2.89",
    "requests>=2.31.0",
    "urllib3>=2.5.0,<3",
    "yfinance>=0.2.30",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "sse-starlette>=1.6.0",
    "fastmcp>=2.0.0",
    "firecrawl-py>=1.0.0",
    "fal-client>=0.5.0",
    "pypdfium2>=4.30.0",
    "lark-oapi>=1.5.3",
]

[project.urls]
Homepage = "https://github.com/HKUDS/Vibe-Trading"
Repository = "https://github.com/HKUDS/Vibe-Trading"
Issues = "https://github.com/HKUDS/Vibe-Trading/issues"

[project.scripts]
vibe-trading = "cli:main"
vibe-trading-mcp = "mcp_server:main"

[tool.setuptools]
py-modules = ["cli", "api_server", "mcp_server", "runtime_env"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "backtest*"]

[tool.setuptools.package-data]
"src" = [
    "skills/**/*.md",
    "skills/**/*.yaml",
    "skills/**/*.json",
]
"backtest" = ["*.py"]

[tool.setuptools.data-files]
"config/swarm" = ["config/swarm/*.yaml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "anyio[trio]>=4.13.0",
    "pytest>=9.0.3",
    "pytest-anyio>=0.0.0",
    "pytest-asyncio>=1.3.0",
]
